<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_add_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background_list"
    tools:context=".activity.AddTaskActivity">

    <TextView
        android:id="@+id/text_view_add_task_status_title"
        android:layout_width="104dp"
        android:layout_height="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/task_status"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spinner_add_task_status"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_add_task_task_description" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
...
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/task_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_add_task_task_title"
        app:layout_constraintStart_toStartOf="@+id/edit_text_add_task_task_title"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button_add_task_activity_add_file"
        android:layout_width="wrap_content"
...
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_add_task_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task_button"
        app:layout_constraintStart_toStartOf="parent"
...
