<resources>
    <string name="app_name">TaskMaster</string>
    <string name="all_tasks">all tasks</string>
    <string name="add_task">add task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="all_tasks_title">All Tasks</string>
    <string name="add_task_title">Add Task</string>
    <string name="total_tasks">Total tasks:</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="my_task">My Task</string>
    <string name="add_task_button">add task</string>
    <string name="do_something">Do something</string>
    <string name="my_tasks_image">my tasks image</string>
    <string name="all_tasks_image">all tasks image</string>
    <string name="submitted">Submitted!</string>
    <string name="_0">0</string>
    <string name="code_challenge_28">Code Challenge 28</string>
    <string name="lab_28">Lab 28</string>
    <string name="learning_journal_28">Learning Journal 28</string>
    <string name="no_task_name">No Task Name</string>
    <string name="usernames_tasks">%1$s\'s Tasks</string>
    <string name="task_status">Task Status</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="add_task_speakable_team">Select Team</string>
    <string name="team">Team</string>
    <string name="settings_spinner_speakable_team">Select Team Filter</string>
    <string name="verify_new_account">Verify New Account</string>
    <string name="sign_up_for_new_account">Sign Up for New Account</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="verification_number">Verification Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nickname_not_required">Nickname (Not Required)</string>
    <string name="nickname">Nickname</string>
    <string name="log_out">Log Out</string>
    <string name="enter_password">Enter Password</string>
    <string name="attachment">Attachment</string>
    <string name="no_task_status">No Task Status</string>
    <string name="no_location">No Location</string>
</resources>