...
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TASK-DETAIL" />

    <TextView
        android:id="@+id/text_view_task_detail_description"
        android:layout_width="335dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="512dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_task_detail_activity_location" />

    <TextView
        android:id="@+id/text_view_task_detail_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/text_view_task_detail_activity_task_title"
        app:layout_constraintTop_toBottomOf="@+id/text_view_task_detail_activity_task_title"
        tools:text="STATUS" />
...
